Fixed "name input" in contact, it had overlapping ccs with top serachbar. Added top searchbar CSS into AUFooter and removed the <style> from HTML code, gave top bar its own class, in order to avoud further overlapping.

--- a/css/AUstyle.css
+++ b/css/AUstyle.css
@@ -76,5 +76,22 @@ footer {
    	margin-top:40px;
 }
 
-/* christian testar */
-/* test 2*/
+.search-bar-nav {
+    width: 200px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    margin-top: 8%;
+}
+
+.search-bar-nav-button {
+    margin-left: 5px;
+}
